<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".Fragments.SpellDetailFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_title"
                android:textSize="36sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_type" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                tools:layout_editor_absoluteY="64dp" android:textSize="24sp" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_type" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout">
            <TextView
                    android:text="@string/casting_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_time2" android:layout_weight="1"
                    android:textSize="18sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_time" android:layout_weight="1"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:id="@+id/linearLayout2">
            <TextView
                    android:text="@string/range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_range2" android:layout_weight="1"
                    android:textStyle="bold" android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_range" android:layout_weight="1"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:id="@+id/linearLayout3">
            <TextView
                    android:text="@string/components"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content" android:id="@+id/text_components2" android:layout_weight="1"
                    android:textSize="18sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_components" android:layout_weight="1"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout4">
            <TextView
                    android:text="@string/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_duration2" android:layout_weight="1"
                    android:textSize="18sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_duration" android:layout_weight="1"
                    android:textSize="18sp"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_desc" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_desc" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout5">
            <TextView
                    android:text="@string/classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_classes2" android:layout_weight="1"
                    android:textSize="14sp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_classes" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/add_to_spellbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_button" android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:icon="@drawable/ic_add_circle_black_24dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
